fix: grid gap

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -78,7 +78,7 @@
 @media (min-width: 768px) {
     .cards.mini-teaser > ul {
         display: grid;
-        grid-gap: 30px;
+        grid-gap: 20px;
         grid-template-columns: repeat(2, 1fr);
         padding-left: 0;
         padding-right: 0;
@@ -98,7 +98,6 @@
 
 @media (min-width: 992px) {
     .cards.mini-teaser > ul {
-        grid-gap: 20px;
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     }
 
